# task-manager

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  MyApplication.pro  MyServer.pro  basepage.cpp  basepage.h  controller.cpp  controller.h  docker-compose.yml  handler.cpp  handler.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc  screensfactory.cpp  screensfactory.h  server.cpp  server.h  task-manager.pro
base/: basefragment.cpp  basefragment.h  basescreensfactory.cpp  basescreensfactory.h  baseserver.cpp  baseserver.h  component.cpp  component.h  dbconnection.cpp  dbconnection.h  navigator.cpp  navigator.h  singleton.cpp  singleton.h
controller/: applicationcontroller.cpp  applicationcontroller.h  authcontroller.cpp  authcontroller.h  frontcontroller.cpp  frontcontroller.h  projectcontroller.cpp  projectcontroller.h
controller/base/: controller.cpp  controller.h
dto/: loginrequest.cpp  loginrequest.h  registerrequest.cpp  registerrequest.h  response.cpp  response.h  simplerequest.cpp  simplerequest.h
dto/base/: datatransferobject.cpp  datatransferobject.h  response.cpp  response.h
dto/request/: getrequest.cpp  getrequest.h  joinrequest.cpp  joinrequest.h  loginrequest.cpp  loginrequest.h  participationrequest.cpp  participationrequest.h  projectpostrequest.cpp  projectpostrequest.h  projectrequest.cpp  projectrequest.h  projectupdaterequest.cpp  projectupdaterequest.h  registerrequest.cpp  registerrequest.h  simplerequest.cpp  simplerequest.h  taskpostrequest.cpp  taskpostrequest.h  taskupdaterequest.cpp  taskupdaterequest.h  userrequest.cpp  userrequest.h
dto/response/: projectresponse.cpp  projectresponse.h  taskresponse.cpp  taskresponse.h  userresponse.cpp  userresponse.h
model/: project.cpp  project.h  session.cpp  session.h  task.cpp  task.h  user.cpp  user.h  userproject.cpp  userproject.h  usertask.cpp  usertask.h
model/base/: model.cpp  model.h
models/: basemodel.cpp  basemodel.h  projectmodel.cpp  projectmodel.h
models/homeRecentProject/: homerecentprojectmodel.cpp  homerecentprojectmodel.h
models/homeTask/: hometaskmodel.cpp  hometaskmodel.h
models/owner/: ownermodel.cpp  ownermodel.h
page/: AuthPage.qml  BacklogPage.qml  BoardPage.qml  CorePage.qml  HomePage.qml  MainPage.qml  ProfilePage.qml  authpage.cpp  authpage.h  backlogpage.cpp  backlogpage.h  homepage.cpp  homepage.h  mainpage.cpp  mainpage.h
pages/access/: AccessPage.qml
pages/account/: AccountPage.qml
pages/authorization/: AuthorizationPage.qml  authorizationpage.cpp  authorizationpage.h
pages/backlog/: BacklogPage.qml
pages/board/: BoardPage.qml
pages/datails/: DetailsPage.qml
pages/home/: HomePage.qml  homepage.cpp  homepage.h
pages/main/: MainPage.qml  mainpage.cpp  mainpage.h
pages/project/: ProjectPage.qml
pages/projects/: ProjectsPage.qml
pages/registration/: RegistrationPage.qml  registrationpage.cpp  registrationpage.h
pages/settings/: SettingsPage.qml
pages/taskTypes/: TaskTypesPage.qml
pages/tasks/: TasksPage.qml
repository/: projectrepository.cpp  projectrepository.h  sessionrepository.cpp  sessionrepository.h  taskrepository.cpp  taskrepository.h  userprojectrepository.cpp  userprojectrepository.h  userrepository.cpp  userrepository.h  usertaskrepository.cpp  usertaskrepository.h
repository/base/: repository.cpp  repository.h
security/: aesencryption.cpp  aesencryption.h  encoder.h  rsaencryption.cpp  rsaencryption.h
security/bigint/: bigint.cpp  mini-gmp.cpp
service/: authservice.cpp  authservice.h  projectservice.cpp  projectservice.h  taskservice.cpp  taskservice.h  userservice.cpp  userservice.h
service/base/: service.cpp  service.h
tests/: authservicetests.cpp  authservicetests.h  encodertests.cpp  encodertests.h  projectservicetests.cpp  projectservicetests.h  taskservicetests.cpp  taskservicetests.h
ui/: mainfragment.cpp  mainfragment.h  mainfragment.ui  secondwindow.cpp  secondwindow.h  secondwindow.ui
ui/auth/: loginfragment.cpp  loginfragment.h  loginfragment.ui  loginfragment_old.cpp  loginfragment_old.h
ui/project/: projectfragment.cpp  projectfragment.h  projectfragment.ui
ui/view/: projectwidget.cpp  projectwidget.h
widget/: BreadCrumbs.qml  Navbar.qml  ProjectButton.qml  Sidebar.qml  SidebarButton.qml  SidebarProjectButton.qml  TaskButton.qml
widgets/header/: Header.qml
widgets/homeTask/: HomeTask.qml
widgets/projectSidebar/: ProjectSidebar.qml
widgets/settingsSidebar/: SettingsSidebar.qml
